<resources>
    <string name="app_name">StockMe</string>

    <string name="common_positive_cta">Aceptar</string>
    <string name="common_negative_cta">Cancelar</string>

    <!--- INICIO - ACTIVITY LOGIN VALUES -->
    <string name="login_login">Login</string>

    <!--    Login Activity -->
    <string name="login_sign_in">Iniciar Sesión</string>
    <string name="login_email">Email</string>
    <string name="login_email_input">Ingresá tu email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_password_input">Ingresá tu contraseña</string>
    <string name="login_no_account">No tengo cuenta</string>
    <string name="login_forgot_password">Olvidé mi contraseña</string>
    <string name="login_forgot_password_dialog_title">Ingresá tu email</string>
    <string name="login_forgot_password_dialog_positive_cta">Aceptar</string>
    <string name="login_forgot_password_dialog_negative_cta">Cancelar</string>
    <string name="login_invalid_parameters">Por favor, revisá los datos ingresados</string>
    <string name="login_invalid_email">Por favor, revisá el formato de email ingresado</string>
    <string name="login_invalid_user_password">Usuario o contraseña incorrectos</string>
    <string name="login_error">Ocurrió un problema. Intente nuevamente</string>
    <string name="login_password_reset_successful">Su contraseña ha sido reseteada exitosamente</string>

    <!--    Register Activity -->
    <string name="register_title">Registrarse</string>
    <string name="register_name">Nombre</string>
    <string name="register_name_input">Ingresá tu nombre</string>
    <string name="register_email">Email</string>
    <string name="register_email_input">Ingresá tu email</string>
    <string name="register_password">Contraseña</string>
    <string name="register_password_input">Ingresá una contraseña</string>
    <string name="register_repeat_password">Confirmar contraseña</string>
    <string name="register_repeat_password_input">Repetí la contraseña</string>
    <string name="register_terms_and_conditions">Acepto los términos y condiciones</string>
    <string name="register_invalid_parameters">Por favor, revisá los datos ingresados</string>
    <string name="register_error">Ocurrió un problema. Intente nuevamente</string>
    <!--    Product Detail-->

    <string name="product_detail_title">Detalle del Producto</string>
    <string name="product_detail_title_new_product">Nuevo Producto</string>
    <string name="product_detail_scan">Escanear</string>
    <string name="product_detail_save">Guardar</string>
    <string name="product_detail_description_hint">Descripción</string>
    <string name="product_detail_price_hint">Precio</string>
    <string name="product_detail_available">Habilitado</string>
    <string name="product_detail_current_stock">Stock Actual</string>
    <string name="product_detail_min_stock">Stock Mínimo</string>
    <string name="product_detail_max_stock">Stock Máximo</string>
    <string name="product_detail_stock_hint">-</string>
    <string name="product_detail_error">Ocurrió un problema. Intente nuevamente</string>
    <string name="product_detail_invalid_parameters">Por favor, revisá los datos ingresados</string>
    <string name="product_detail_product_created_title">El producto ha sido creado satisfactoriamente</string>
    <string name="product_detail_product_modified_title">El producto ha sido modificado satisfactoriamente</string>
    <string name="product_detail_product_upload_photo_title">La foto ha sido creada satisfactoriamente</string>
    <string name="product_search_not_found">No hay productos que coincidan con tu búsqueda</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Productos</string>
    <string name="menu_sales">Nueva venta</string>
    <string name="menu_drawer_sales">Ventas</string>
    <string name="menu_drawer_stock">Órdenes de compra</string>
    <string name="menu_stock">Nueva orden de compra</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="rationale_camera">Se requiere el uso de la cámara para tomar fotografías.</string>

    <string name="dialog_logout_text">¿Confirma que desea cerrar sesión?</string>
    <string name="dialog_logout_yes">SI</string>
    <string name="dialog_logout_no">Cancelar</string>

    <string name="dialog_cart_add_text">¿Cuántas unidades?</string>
    <string name="dialog_cart_yes">CONFIRMAR</string>
    <string name="dialog_cart_no">CANCELAR</string>

    <string name="dialog_cart_no_stock_text">No hay unidades de este producto</string>

    <string name="dialog_cart_max_stock_text">El producto está en el stock máximo</string>

    <string name="dialog_cart_empty_text">El carrito está vacío</string>
    <string name="dialog_cart_empty_yes">OK</string>
    <string name="activity_cart">Último paso</string>
    <string name="dialog_cart_confirm_text">¿Confirma la venta?</string>
    <string name="dialog_cart_confirm_desc">Los productos serán descontados del stock disponible.</string>

    <string name="dialog_cart_stock_confirm_text">¿Confirma la compra?</string>
    <string name="dialog_cart_stock_confirm_desc">Los productos serán agregados al stock disponible.</string>

    <string name="dialog_cart_confirm_sale_text">Venta confirmada!</string>
    <string name="dialog_cart_confirm_stock_text">Compra confirmada!</string>

    <string name="dialog_sales_max_stock">La cantidad deseada supera el stock disponible</string>
    <string name="dialog_stock_max_stock">La cantidad deseada supera el stock máximo del producto</string>
    <string name="activity_login_title">Iniciar sesión</string>
    <string name="activity_register_title">Registro</string>


</resources>