<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_menu_sales"
            android:title="@string/menu_drawer_sales" />
        <item
            android:id="@+id/nav_stocks"
            android:icon="@drawable/ic_menu_stock"
            android:title="@string/menu_drawer_stock" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>