<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.stockme.product.ProductListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_sales"
        android:name="com.stockme.home.ui.sales.SalesFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/nav_stocks"
        android:name="com.stockme.home.ui.stock.StockFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_stock" />

    <dialog
        android:id="@+id/nav_logout"
        android:name="com.stockme.home.LogoutDialogFragment"
        android:label="Cerrar sesión" />
</navigation>