<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity"
    android:paddingTop="80dp">

    <TextView
        android:id="@+id/register_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        android:text="@string/register_name"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/register_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/register_title"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/register_name_input"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name_title"
        android:text="@string/register_email"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/register_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/register_name_title"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/register_email_input"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email_title"
        android:text="@string/register_password"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/register_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/register_email_title"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/register_password_input"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/register_repeat_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password_title"
        android:text="@string/register_repeat_password"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/register_repeat_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/register_password_title"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/register_repeat_password_input"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/register_terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_repeat_password_edit_text"
        android:text="@string/register_terms_and_conditions"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <CheckBox
        android:id="@+id/register_checkbox"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@+id/register_terms_and_conditions"
        app:layout_constraintRight_toLeftOf="@id/register_terms_and_conditions" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/register_terms_and_conditions"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/register_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>