<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    tools:context=".login.LoginActivity">

    <TextView
        android:id="@+id/login_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login_email"
        android:textSize="16sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        android:nextFocusForward="@id/login_email_edit_text"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/login_email"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/login_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_title"
        android:text="@string/login_password"
        android:textSize="16sp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/login_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/login_email_title"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/login_password_input"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginRight="32dp"
        android:text="@string/login_forgot_password"
        android:textStyle="italic|bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/login_sign_in"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_title" />

    <TextView
        android:id="@+id/no_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/login_no_account"
        android:textColor="@color/black"
        android:textStyle="italic|bold"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>