<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".productdetail.ProductDetailActivity">

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerInside"
            android:src="@drawable/ic_empty_image"/>

        <ImageView
            android:id="@+id/ic_barcode"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/product_image_view"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            android:src="@drawable/ic_barcode"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/product_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            app:layout_constraintStart_toEndOf="@+id/ic_barcode"
            app:layout_constraintTop_toBottomOf="@+id/product_image_view"
            android:textColor="@color/black"
            android:visibility="invisible"
            tools:text="59012341234567" />

        <Button
            android:id="@+id/product_scan_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/product_detail_scan"
            app:layout_constraintLeft_toRightOf="@id/product_barcode"
            app:layout_constraintTop_toBottomOf="@id/product_image_view" />

        <EditText
            android:id="@+id/product_description"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/product_detail_description_hint"
            android:layout_marginTop="50dp"
            android:inputType="textCapSentences"
            android:lines="1"
            android:nextFocusForward="@id/product_price"
            app:layout_constraintTop_toBottomOf="@+id/ic_barcode"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:hint="@string/product_detail_price_hint"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            android:nextFocusForward="@id/product_current_stock_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/product_description"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline" />

        <CheckBox
            android:id="@+id/product_checkbox"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintTop_toBottomOf="@+id/product_price"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline" />

        <TextView
            android:id="@+id/product_checkbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/product_checkbox"
            app:layout_constraintTop_toBottomOf="@+id/product_price"
            android:text="@string/product_detail_available"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/product_checkbox_text"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toLeftOf="@id/right_guideline"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/product_current_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            android:textColor="@color/black"
            android:text="@string/product_detail_current_stock" />

        <TextView
            android:id="@+id/product_min_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintLeft_toRightOf="@id/product_current_stock"
            app:layout_constraintRight_toLeftOf="@id/product_max_stock"
            android:textColor="@color/black"
            android:text="@string/product_detail_min_stock" />

        <TextView
            android:id="@+id/product_max_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintRight_toLeftOf="@id/right_guideline"
            android:textColor="@color/black"
            android:text="@string/product_detail_max_stock" />

        <EditText
            android:id="@+id/product_max_stock_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/product_max_stock"
            app:layout_constraintLeft_toLeftOf="@+id/product_max_stock"
            app:layout_constraintRight_toLeftOf="@id/right_guideline"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:inputType="number"
            android:textAlignment="center"
            android:hint="@string/product_detail_stock_hint" />

        <EditText
            android:id="@+id/product_min_stock_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/product_min_stock"
            app:layout_constraintLeft_toLeftOf="@id/product_min_stock"
            app:layout_constraintRight_toRightOf="@id/product_min_stock"
            android:nextFocusForward="@id/product_max_stock_edit_text"
            android:imeOptions="actionNext"
            android:textColor="@color/black"
            android:inputType="number"
            android:textAlignment="center"
            android:hint="@string/product_detail_stock_hint" />

        <EditText
            android:id="@+id/product_current_stock_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/product_current_stock"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@id/product_current_stock"
            android:textColor="@color/black"
            android:inputType="number"
            android:textAlignment="center"
            android:nextFocusForward="@id/product_min_stock_edit_text"
            android:imeOptions="actionNext"
            android:hint="@string/product_detail_stock_hint" />

        <Button
            android:id="@+id/product_save_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/product_detail_save"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/product_current_stock_edit_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>